--- a/splaylist.WASM/_Imports.razor
+++ b/splaylist.WASM/_Imports.razor
@@ -1,8 +1,10 @@
 ﻿@using System.Net.Http
+@using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using splaylist
-@using splaylist.Pages
-@using splaylist.Pages.Shared
+@using splaylist.WASM
+@using splaylist.WASM.Pages
+@using splaylist.WASM.Pages.Shared
